cluster/apps/default/frigate/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: default
spec:
  selector:
    app: frigate
  ports:
    - name: http
      port: 8971
      targetPort: http
    - name: rtsp
      port: 8554
      targetPort: rtsp
