cluster/apps/default/frigate/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: default
  annotations:
    hajimari.io/appName: Frigate
    hajimari.io/enable: "true"
    hajimari.io/icon: cctv
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-internal-ips-only@kubernetescrd
    external-dns/internal: "true"
spec:
  ingressClassName: traefik-internal
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - frigate.${SECRET_LAB_DOMAIN}
  rules:
    - host: frigate.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  name: http
